welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:6: error: not found: value itMessage
                itMessage();
                ^