welcome.lessons.welcome.bdr.BDR2.scala.code
var fini:Boolean = false ;
while (!fini) {
  litMessage() match {
    case "R" => droite();
                avance();
                itMessage();
    case "L" => gauche();
                avance();
                litMessage();
    case "I" => droite();
                droite();
                avance();
                litMessage();
    case "A" => avance();
                litMessage();
    case "B" => avance();
                litMessage();
                avance();
    case "C" => avance();
                litMessage();
                avance();
                avance();
    case "Z" => recule();
                litMessage();
    case "Y" => recule();
                litMessage();
                recule();
    case "X" => recule();
                litMessage();
                recule();
                recule();
    case "D" => avance(4);
    case "E" => avance(5);
    case "F" => avance(6);
    case "W" => recule(4);
    case "V" => recule(5);
    case "U" => recule(6);
   case _ => fini = true
  }

}